--- a/helm/templates/traefik-ingress-pgadmin.yml
+++ b/helm/templates/traefik-ingress-pgadmin.yml
@@ -1,18 +1,18 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: {{ .Values.ingress.traefik-pgadmin }}
-  annotations:
-    kubernetes.io/ingress.class: "traefik"
-spec:
-  rules:
-    - host: {{ .Values.ingress.host }}
-      http:
-        paths:
-          - path: {{ .Values.pgadmin.traefik_path }}
-            pathType: {{ .Values.pgadmin.pathType }}
-            backend:
-              service:
-                name: {{ .Values.pgadmin.traefik }}-svc
-                port: 
-                  number: {{ .Values.pgadmin.servicePort }}
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: {{ .Values.ingress.traefik-pgadmin }}
+#   annotations:
+#     kubernetes.io/ingress.class: "traefik"
+# spec:
+#   rules:
+#     - host: {{ .Values.ingress.host }}
+#       http:
+#         paths:
+#           - path: {{ .Values.pgadmin.traefik_path }}
+#             pathType: {{ .Values.pgadmin.pathType }}
+#             backend:
+#               service:
+#                 name: {{ .Values.pgadmin.traefik }}-svc
+#                 port: 
+#                   number: {{ .Values.pgadmin.servicePort }}
