--- a/helm/templates/kong-ingress.yml
+++ b/helm/templates/kong-ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Values.ingress.kong-name }}
+  name: {{ .Values.ingress.kong }}
   annotations:
     kubernetes.io/ingress.class: "kong"
     # konghq.com/strip-path: "true"
