--- a/helm/templates/traefik-ingress.yml
+++ b/helm/templates/traefik-ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Values.ingress.traefik-name }}
+  name: {{ .Values.ingress.traefik }}
   annotations:
     kubernetes.io/ingress.class: "traefik"
 spec:
