--- a/helm/templates/traefik-ingress.yml
+++ b/helm/templates/traefik-ingress.yml
@@ -24,3 +24,11 @@ spec:
                 name: {{ .Values.helloworld.name }}-svc
                 port: 
                   number: {{ .Values.helloworld.servicePort }}
+
+          - path: {{ .Values.pgadmin.traefik_path }}
+            pathType: {{ .Values.pgadmin.pathType }}
+            backend:
+              service:
+                name: {{ .Values.pgadmin.traefik }}-svc
+                port: 
+                  number: {{ .Values.pgadmin.servicePort }}
