--- a/helm/templates/kong-ingress.yml
+++ b/helm/templates/kong-ingress.yml
@@ -4,8 +4,6 @@ metadata:
   name: {{ .Values.ingress.kong }}
   annotations:
     kubernetes.io/ingress.class: "kong"
-    # konghq.com/strip-path: "true"
-spec:
   rules:
     - host: {{ .Values.ingress.host }}
       http:
@@ -30,6 +28,6 @@ spec:
             pathType: {{ .Values.pgadmin.pathType }}
             backend:
               service:
-                name: {{ .Values.pgadmin.kong }}-svc
+                name: {{ .Values.pgadmin.name }}-svc
                 port: 
                   number: {{ .Values.pgadmin.servicePort }}
