--- a/helm/templates/traefik-ingress.yml
+++ b/helm/templates/traefik-ingress.yml
@@ -29,6 +29,6 @@ spec:
             pathType: {{ .Values.pgadmin.pathType }}
             backend:
               service:
-                name: {{ .Values.pgadmin.traefik }}-svc
+                name: {{ .Values.pgadmin.name }}-svc
                 port: 
                   number: {{ .Values.pgadmin.servicePort }}
