--- a/helm/templates/all-ingress.yml
+++ b/helm/templates/all-ingress.yml
@@ -1,14 +1,37 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Values.ingress.traefik }}
+  name: {{ .Values.ingress.kong }}
   annotations:
+    kubernetes.io/ingress.class: "kong"
     kubernetes.io/ingress.class: "traefik"
-spec:
   rules:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
+          - path: {{ .Values.echoserver.kong_path }}
+            pathType: {{ .Values.echoserver.pathType }}
+            backend:
+              service:
+                name: {{ .Values.echoserver.name }}-svc
+                port: 
+                  number: {{ .Values.echoserver.servicePort }}
+
+          - path: {{ .Values.helloworld.kong_path }}
+            pathType: {{ .Values.helloworld.pathType }}
+            backend:
+              service:
+                name: {{ .Values.helloworld.name }}-svc
+                port: 
+                  number: {{ .Values.helloworld.servicePort }}
+                  
+          - path: {{ .Values.pgadmin.kong_path }}
+            pathType: {{ .Values.pgadmin.pathType }}
+            backend:
+              service:
+                name: {{ .Values.pgadmin.name }}-svc
+                port: 
+                  number: {{ .Values.pgadmin.servicePort }}
           - path: {{ .Values.echoserver.traefik_path }}
             pathType: {{ .Values.echoserver.pathType }}
             backend:
