--- a/helm/templates/kong-ingress.yml
+++ b/helm/templates/kong-ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Values.ingress.kong }}
+  name: {{ .Values.ingress.kong_ingress }}
   annotations:
     kubernetes.io/ingress.class: "kong"
 spec:
@@ -9,14 +9,6 @@ spec:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
-          - path: {{ .Values.pgadmin.kong_path }}
-            pathType: {{ .Values.pgadmin.pathType }}
-            backend:
-              service:
-                name: {{ .Values.pgadmin.kong }}-svc
-                port: 
-                  number: {{ .Values.pgadmin.servicePort }}
-
           - path: {{ .Values.echoserver.kong_path }}
             pathType: {{ .Values.echoserver.pathType }}
             backend:
@@ -32,3 +24,4 @@ spec:
                 name: {{ .Values.helloworld.name }}-svc
                 port: 
                   number: {{ .Values.helloworld.servicePort }}
+                  
