--- a/helm/templates/kong-ingress-pgadmin.yml
+++ b/helm/templates/kong-ingress-pgadmin.yml
@@ -4,7 +4,8 @@ metadata:
   name: {{ .Values.ingress.kong_pgadmin_ingress }}
   annotations:
     kubernetes.io/ingress.class: "kong"
-    konghq.com/strip-path: "true"
+    sidecar.istio.io/inject: false
+    kuma.io/sidecar-injection: "disabled"
 spec:
   rules:
     - host: {{ .Values.ingress.host }}
